samples/_failures_safe/1761141698_aa102b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e2e6f4b.c: In function ‘main’:
./samples/SAFE/__tmp_5e2e6f4b.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
